// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectField should match the snapshot 1`] = `
<SelectField__StyledSelectField
  onBlur={[Function]}
  onKeyDown={[Function]}
  width="100%"
>
  <Input
    handleChange={[Function]}
    handleFocus={[Function]}
    placeholder=""
    value=""
  />
  <Select
    onClick={[Function]}
    options={Array []}
    selected=""
    visible={false}
    width="100%"
  />
  <SelectField__StyledCaretDown />
</SelectField__StyledSelectField>
`;

exports[`SelectField should match the snapshot with options 1`] = `
<SelectField__StyledSelectField
  onBlur={[Function]}
  onKeyDown={[Function]}
  width="100%"
>
  <Input
    handleChange={[Function]}
    handleFocus={[Function]}
    placeholder=""
    value=""
  />
  <Select
    onClick={[Function]}
    options={
      Array [
        Object {
          "label": "Label",
          "value": "Value",
        },
      ]
    }
    selected="Value"
    visible={false}
    width="100%"
  />
  <SelectField__StyledCaretDown />
</SelectField__StyledSelectField>
`;
